--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.22.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "gh-pages": "^4.0.0",
     "html-react-parser": "^3.0.1",
     "millify": "^5.0.0",
     "moment": "^2.29.4",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https:///nahee101.github.io/crypto_app_build"
 }
