--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https:///nahee101.github.io/crypto_app_build"
+  "homepage": "https://nahee101.github.io/crypto_app_build"
 }
